# CPPStuff

./: CMakeLists.txt  HelloWorld  HelloWorld.cpp  README.md  experiments-O0.csv  experiments-O3.csv  experiments.csv  generate_graph.py  matrix  matrix.cpp
HelloWorld.dSYM/Contents/Resources/DWARF/: HelloWorld
HelloWorld.dSYM/Contents/Resources/Relocations/aarch64/: HelloWorld.yml
MatrixLib/: CMakeLists.txt  matrix  matrix.cpp
SIMD/: AVX.cpp  CMakeLists.txt  MATMULv1.cpp  MATMULv2.cpp  matmul_utils.cpp  matmul_utils.h  testing_writes.cpp
Utilities/: CMakeLists.txt  matmul_utils.cpp  matmul_utils.h
matrix.dSYM/Contents/Resources/DWARF/: matrix
matrix.dSYM/Contents/Resources/Relocations/aarch64/: matrix.yml
